# CMake-Learning

./: README.md
1_Simple_Case/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp
2_same_dir_two_cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  func.cpp  main
3_two_dir_two_cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
3_two_dir_two_cpp/fun1/: func1.cpp
4_normal_structure/: CMakeLists.txt
4_normal_structure/include/: func1.h
5_dll_lib_compile_link/: CMakeLists.txt
6_use_lib/: CMakeLists.txt
6_use_lib/src/: main.cpp
7_compile_option/: CMakeLists.txt
8_debug_option/: CMakeLists.txt
8_debug_option/src/: CMakeLists.txt
